--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,11 @@
     100%{opacity:1}
 }
 
+@-webkit-keyframes fadeOut{
+    0%{opacity:1}
+    100%{opacity:0}
+}
+
 @-webkit-keyframes move-fadeIn1{
     0%{opacity:0;-webkit-transform:translate(-200px,-200px)}
     100%{opacity:1:-webkit-transform:translate(0)}
@@ -123,9 +128,19 @@
 }
 
 @-webkit-keyframes fade_out_1{
-    0%{-webkit-transform:scale(1) rotate(0); }
-    15%{ -webkit-transform:scale(1.1) rotate(0);}
-    50%{ -webkit-transform:scale(1) rotate(90deg);}
-	75%{-webkit-transform:scale(0.5) rotate(180deg);}
-    100%{ -webkit-transform:scale(0) rotate(360deg);}
+    0%{ -webkit-transform:scale(1) rotate(0); }
+    15%{ -webkit-transform:scale(1.1)  rotate(0);}
+    30%{ -webkit-transform:scale(1)  rotate(0);}
+    100%{ -webkit-transform:scale(0) rotate(180deg); }
+}
+
+@-webkit-keyframes fade_in_1{
+    0%{ -webkit-transform:scale(0) rotate(0); }
+    15%{ -webkit-transform:scale(1)  rotate(180deg);}
+    30%{ -webkit-transform:scale(1.1)  rotate(0);}
+    100%{ -webkit-transform:scale(1) rotate(0); }
+}
+
+.fade_in_1{
+	-webkit-animation:fade ease 1s;
 }
