--- a/PC/css/impress-demo.css
+++ b/PC/css/impress-demo.css
@@ -701,3 +701,54 @@ a:focus {
     Thanks for reading. I hope you enjoyed it at least as much as I enjoyed writing it
     for you.
 */
+
+.trans_type{
+    position: relative;
+    left:300px;
+    top:-300px;
+}
+
+.trans_type img{
+    width:200px;
+}
+
+.trans_box,.trans_box_back{
+    position: absolute;
+    top:100px;
+    left:100px;
+    border: 3px solid #000;
+    width:200px;
+    height: 200px;
+    -webkit-transition:-webkit-transform .5s ease;
+}
+
+.trans_box_back{
+    background-color: #FCC;
+    opacity: 0.5;
+}
+
+.type_translate .trans_box{
+
+}
+
+.type_translate .trans_box_back{
+    -webkit-transform:translate(100px,0);
+}
+
+.type_scale .trans_box_back{
+    -webkit-transform:scale(2,1);
+}
+
+.type_skew .trans_box_back{
+    -webkit-transform:skewX(30deg);
+}
+
+.type_rotate .trans_box_back{
+    -webkit-transform:rotate(30deg);
+}
+
+#rotatebox{
+    border: 2px solid #000;
+    width:200px;
+    height:200px;
+}
