--- a/PC/css/experiment.css
+++ b/PC/css/experiment.css
@@ -1,10 +1,10 @@
 #sphere {
-    width: 50px;
-    height: 50px;
-    margin: 150px 50px;
-    float: right;
+    width: 25px;
+    height: 25px;
+    position: fixed;
+    right:100px;
+    bottom:100px;
     -webkit-perspective: 800;
-    -moz-perspective: 800;
 }
 
 .container {
@@ -12,13 +12,10 @@
     height: 50px;
     -webkit-transition: -webkit-transform 200ms linear;
     -webkit-transform-style: preserve-3d;
-    -moz-transition: -moz-transform 200ms linear;
-    -moz-transform-style: preserve-3d;
 }
 
 .container > ul {
     -webkit-transform-style: preserve-3d;
-    -moz-transform-style: preserve-3d;
     width: 100%;
     height: 100%;
     position: absolute;
@@ -49,7 +46,6 @@
 #sphere.kaleidoscope li {
     opacity: 0.9;
     -webkit-animation: borderRadius 5s linear infinite alternate;
-    -moz-animation: borderRadius 5s linear infinite alternate;
 }
 
 /* Eye */
@@ -158,10 +154,10 @@
 
 @-moz-keyframes spinHorizontal {
   from {
-  	-moz-transform: rotateY(0deg);
+  	-webkit-transform: rotateY(0deg);
   }
   to {
-  	-moz-transform: rotateY(360deg);
+  	-webkit-transform: rotateY(360deg);
   }
 }
 
