--- a/PC/css/index.css
+++ b/PC/css/index.css
@@ -16,8 +16,7 @@ ul.gallery li {
     padding: 0;
     margin: 0;
     border: none;
-    -webkit-transition: -webkit-transform 1s ease;
-    -webkit-transform: rotate(0deg);
+    -webkit-transition: all 2s ease;
     left: 0;
     top: 0;
 }
