--- a/PC/css/index.css
+++ b/PC/css/index.css
@@ -1,15 +1,15 @@
 body {
     background: #FFF url(../images/wood-bg.jpg) repeat;
-    overflow: scroll;
+    overflow: hidden;
 }
 
-ul.gallery {
+#gallery_contain {
     position: absolute;
-    left: 0;
-    top: 0;
+    height: 100%;
+    width: 100%;
 }
 
-ul.gallery li {
+.flip-container {
     list-style: none;
     position: absolute;
     display: block;
@@ -19,6 +19,7 @@ ul.gallery li {
     -webkit-transition: all 2s ease;
     left: 0;
     top: 0;
+    z-index: 10;
 }
 
 ul.gallery li:hover {
@@ -40,12 +41,11 @@ ul.gallery li.hidden {
 }
 
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 ul.gallery img.fadeOut {
     -webkit-animation: fade_out_1 1.5s;
-
 }
 
 ul.gallery li a img {
@@ -58,7 +58,7 @@ ul.gallery li a img {
     border-radius: 5px;
     -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
     height: 200px;
-    opacity: 0;
+    /*opacity: 0;*/
     /*-webkit-transition: opacity ease 1.5s, width ease 1s, height ease 1s;*/
     -webkit-transition: all ease 1s;
 }
@@ -78,7 +78,7 @@ ul.gallery li a img.thumbnail {
     font-size: 18px;
     border-radius: 5px;
     -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
-    opacity: 0;
+    /*opacity: 0;*/
     -webkit-transition: opacity ease 1.5s, width ease 1s, height ease 1s;
 }
 
@@ -86,25 +86,6 @@ ul.gallery li a:hover {
     z-index: 100;
 }
 
-ul.gallery li.show1 {
-    -webkit-animation: move-fadeIn1 ease-out 1s;
-}
-
-ul.gallery li.show2 {
-    -webkit-animation: move-fadeIn2 ease-out 1s;
-}
-
-ul.gallery li.show3 {
-    -webkit-animation: move-fadeIn3 ease-out 1s;
-}
-
-ul.gallery li.show4 {
-    -webkit-animation: move-fadeIn4 ease-out 1s;
-}
-
-ul.gallery li.show5 {
-    -webkit-animation: move-fadeIn5 ease-out 1s;
-}
 
 #nav {
     list-style: none;
