--- a/PC/css/main.css
+++ b/PC/css/main.css
@@ -71,7 +71,7 @@
     }
 }
 
-@-webkit-keyframes start {
+@-webkit-keyframes select_active {
     0% {
         -webkit-box-shadow: 0 0 10px #333;
         -webkit-transform: scale(1);
@@ -216,4 +216,68 @@
 
 .fade_in_1 {
     -webkit-animation: fade ease 1s;
+}
+
+/* entire container, keeps perspective */
+.flip-container {
+    perspective: 1000;
+    -webkit-perspective: 1000;
+    width: 340px;
+    height: 225px;
+    border-radius: 5px;
+    z-index: 0;
+}
+
+/* flip the pane when hovered */
+.flip-container:hover {
+    z-index: 100;
+}
+
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+    /*transform: rotateY(180deg);*/
+    -webkit-animation: select_active infinite ease-in-out 1s;
+}
+
+.front, .back {
+    width: 320px;
+    height: 200px;
+    background: #ffffff;
+    padding: 10px 10px 15px;
+    text-align: center;
+    text-decoration: none;
+    color: #333;
+    font-size: 18px;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
+    /*opacity: 0;*/
+    /*-webkit-transition: opacity ease 1.5s, width ease 1s, height ease 1s;*/
+    -webkit-transition: all ease 1s;
+    cursor: pointer;
+}
+
+/* flip speed goes here */
+.flipper {
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+    z-index: 2;
+}
+
+/* back, initially hidden pane */
+.back {
+    transform: rotateY(180deg);
 }
