--- a/PC/css/main.css
+++ b/PC/css/main.css
@@ -138,7 +138,7 @@
 }
 
 .focus {
-    z-index: 1000;
+    z-index: 1000 !important;
 }
 
 .focus img {
@@ -233,35 +233,51 @@
     z-index: 100;
 }
 
+/*.flip-container.focus {*/
+/*height: 450px;*/
+/*width: 680px;*/
+/*}*/
+
+/*.front.focus, .back.focus {*/
+/*height: 450px;*/
+/*width: 680px;*/
+/*}*/
+
 .flip-container:hover .flipper, .flip-container.hover .flipper {
     /*transform: rotateY(180deg);*/
     -webkit-animation: select_active infinite ease-in-out 1s;
 }
 
+.flip-container:hover.focus .flipper, .flip-container.hover.focus .flipper {
+    /*transform: rotateY(180deg);*/
+    -webkit-animation: none;
+}
+
 .front, .back {
-    width: 320px;
-    height: 200px;
-    background: #ffffff;
-    padding: 10px 10px 15px;
+    width: 100%;
+    height: 100%;
     text-align: center;
     text-decoration: none;
     color: #333;
     font-size: 18px;
-    border-radius: 5px;
-    -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
     /*opacity: 0;*/
     /*-webkit-transition: opacity ease 1.5s, width ease 1s, height ease 1s;*/
-    -webkit-transition: all ease 1s;
-    cursor: pointer;
+
 }
 
 /* flip speed goes here */
 .flipper {
-    transition: 0.6s;
+    /*transition: 0.6s;*/
     transform-style: preserve-3d;
     position: relative;
     width: 100%;
     height: 100%;
+    background: #ffffff;
+    padding: 10px 10px 15px;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
+    /*-webkit-transition: all ease 1s;*/
+    cursor: pointer;
 }
 
 /* hide back of pane during swap */
