--- a/PC/css/index.css
+++ b/PC/css/index.css
@@ -55,7 +55,6 @@ ul.gallery li a img {
     color: #333;
     font-size: 18px;
     border-radius: 5px;
-    background: #FFF;
     -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
     height: 200px;
     /*opacity: 0;*/
@@ -70,7 +69,6 @@ ul.gallery li a img.thumbnail {
     color: #333;
     font-size: 18px;
     border-radius: 5px;
-    background: #FFF;
     -webkit-box-shadow: 1px 3px 6px rgba(0, 0, 0, .25);
     opacity: 0;
     -webkit-transition: opacity ease 1.5s, width ease 1s, height ease 1s;
@@ -106,13 +104,12 @@ ul.gallery li.show5 {
     top: 10%;
     left: 10px;
     z-index: 9999;
-    padding: 0;
+    padding: 15px 0 0 0;
     margin: 0;
     background-color: #000000;
     width: 100px;
     border-radius: 5px;
     box-shadow: 2px 2px 5px #000;
-    padding-top: 15px;
 }
 
 #nav li {
@@ -127,7 +124,6 @@ ul.gallery li.show5 {
 #nav a {
     display: block;
     text-decoration: none;
-    border: 0px solid #fff;
     width: 80px;
     height: 60px;
     line-height: 30px;
@@ -139,7 +135,6 @@ ul.gallery li.show5 {
     -webkit-transition: -webkit-transform .5s ease-in-out, opacity ease .8s;
     color: #000;
     letter-spacing: 2px;
-    font-family: Tahoma, "Microsoft YaHei";
     margin-bottom: 3px;
     opacity: 0.7;
     position: relative;
